fix dark mode colors

--- a/src/components/contact-form.module.css
+++ b/src/components/contact-form.module.css
@@ -1,6 +1,5 @@
 .container {
   padding: 1.5rem 0 1rem 0;
-  color: #262626;
   box-shadow: var(--lightmode-box-shadow);
   display: flex;
   flex-direction: column;
