--- a/src/components/portfolio-preview-single.module.css
+++ b/src/components/portfolio-preview-single.module.css
@@ -76,7 +76,6 @@
   overflow: hidden;
   text-decoration: none;
   color: #262626;
-  background: #fff;
   border-radius: 4px;
   z-index: 10;
   animation: shrink 350ms ease-in alternate both;
@@ -101,6 +100,10 @@
 }
 
 .portfolio-preview-single-name {
+}
+
+.hotspot {
+  background-color: transparent;
 }
 
 @media only screen and (max-width: 800px) {
